# sdia-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
docs/_build/html/: index.html
docs/lab1/: index.rst
docs/lab2/: index.rst
notebooks/: lab1.ipynb  lab1Capu.ipynb  lab2.ipynb  lab3.ipynb
notes/: anaconda-vscode.md  command-line.md  command_line.md  new-project-setup.md  packaging.md  project-workflow.md  self-evaluation.md  tests-documentation.md  to-go-further.md  version-control.md
src/lab1/: fichiertmp.tmp  functions.py  tmp.py
src/lab2/: README.md  Untitled.ipynb  ball_window.py  box_window.py  pi_estimation.py  test.py  tmp.ipynb  utils.py
src/lab3/: README.md
src/sdia_python/lab1/: functions.py
src/sdia_python/lab2/: README.md  box_window.py  utils.py
src/sdia_python/lab3/: README.md
tests/lab1/: test_is_unique.py  test_triangle_shape.py
tests/lab2/: __init__.py  test_ball_window.py  test_box_window.py  test_example.py
