# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#declarative-config

[metadata]
name = sdia-python
version = 0.1.0
url = https://github.com/guilgautier/sdia-python
download_url = https://github.com/guilgautier/sdia-python
project_urls =
    Documentation = https://github.com/guilgautier/sdia-python
    Source = https://github.com/guilgautier/sdia-python
author = Guillaume Gautier
author_email = guillaume.gautier@univ-lille.fr
maintainer = Guillaume Gautier
maintainer_email = guillaume.gautier@univ-lille.fr
# https://pypi.org/classifiers/
classifiers =
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: French
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence
# license =
license_files = file: LICENSE
description = Python practical sessions G3 - SDIA at Centrale Lille
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Python, SDIA, Centrale Lille
# platforms =
# provides =
# requires =
# obsoletes =


[options]
# zip_safe =
# setup_requires =
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    networkx
    numba

# extras_require see [options.extras_require]
python_requires = >=3.8
# entry_points =
# scripts =
# eager_resources =
# dependency_links =
# tests_require =
# include_package_data =
packages = find:
package_dir =
    =src
# namespace_packages =
# py_modules =
# data_files =

[options.packages.find]
where = src
# include =
exclude = tests

[options.extras_require]
# MacOS pip install -e ".[notebook,docs,dev]"
# Windows pip install -e .[notebook,docs,dev]
# Linux idk, one of the two options above
notebook =
    jupyter
    ipykernel
docs =
    sphinx
dev =
    pre-commit
    pytest
    black
    isort

# [options.package_data]

# [options.exclude_package_data
